# yap

./: .envrc  .gitignore  LICENSE  README.md  flake.nix
document/architecture/: README.md
document/protocol/: README.md
implementation/: README.md  default.nix  dune-project
implementation/dune.lock/: lock.dune
implementation/lib/: dune
implementation/test/: dune
proposals/: README.md
rfcs/: 001-protocol.md
spec/: yap.tla
specification/: default.nix
specifications/: Yap.tla
