(lang dune 3.17)

(name yap)

(source
 (github dev71-ae/yap))

(authors "Rashid Almheiri <r.muhairi@pm.me>")

(maintainers "Rashid Almheiri <r.muhairi@pm.me>")

(generate_opam_files true)

(license MIT)

(package
 (name yap)
 (synopsis "Reference implementation of the Yap Protocol")
 (depends
  (ocaml
   (>= 5.2))
  dune))
